--- a/Version3/Car.ipynb
+++ b/Version3/Car.ipynb
@@ -35,7 +35,6 @@
     "from tdamapper.core_old import MapperAlgorithm\n",
     "from tdamapper.cover import CubicalCover\n",
     "from tdamapper.clustering import FailSafeClustering\n",
-    "from tdamapper.plot import MapperLayoutInteractive, MapperPlot\n",
     "\n",
     "from models import *\n",
     "from utils_v3 import *\n",
@@ -57,8 +56,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataA2 = pd.read_csv(\"../Version3/Data/A2.csv\", low_memory=False)\n",
-    "dataA1 = pd.read_csv(\"../Version3/Data/A1.csv\")"
+    "dataA2 = pd.read_csv(\"./Data/A2.csv\", low_memory=False)\n",
+    "dataA1 = pd.read_csv(\"./Data/A1.csv\")"
    ]
   },
   {
@@ -70,12 +69,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_33080\\1818727237.py:55: SettingWithCopyWarning: \n",
+      "C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_30588\\1818727237.py:55: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  car_A1.drop(columns=['當事者行動狀態大類別名稱'], inplace=True)\n",
-      "C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_33080\\1818727237.py:56: SettingWithCopyWarning: \n",
+      "C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_30588\\1818727237.py:56: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -164,9 +163,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "44 10057\n",
+      "45 10286\n",
+      "40 9143\n",
+      "35 8000\n",
+      "36 8229\n",
+      "39 8914\n",
+      "47 10743\n",
+      "43 9829\n",
+      "40 9143\n",
+      "47 10743\n",
+      "(416, 31)\n",
+      "(95087, 31)\n"
+     ]
+    }
+   ],
    "source": [
     "sampling_ratio = 0.33  # 下採樣比例\n",
     "# 計算 A1 和 A2 原始數據量比例\n",
@@ -210,15 +228,6 @@
     "data_to_map = dummy_data.drop(['死亡', '受傷'], axis=1)\n",
     "mapper_numpy = data_to_map.to_numpy()\n",
     "# rbind_data['顯著特徵'] = rbind_data['道路型態子類別名稱'] + ',' + rbind_data['號誌-號誌動作名稱'] + ',' + rbind_data['天候名稱']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rbind_data.to_csv('./Data/CarData/full.csv', index=False)"
    ]
   },
   {
@@ -477,7 +486,7 @@
     "\n",
     "            detailed_results.append(result)\n",
     "\n",
-    "            # filename = f\"../Version3/Gridsearch/Component7Car/results_o{overlap}i{interval}_new_noresemple.pkl\"\n",
+    "            # filename = f\"./Gridsearch/Component7Car/results_o{overlap}i{interval}_new_noresemple.pkl\"\n",
     "\n",
     "            # with open(filename, 'wb') as file:\n",
     "            #     pickle.dump(result, file)\n",
@@ -499,14 +508,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "detailed_results_df = pd.DataFrame(detailed_results)\n",
+    "# detailed_results_df = pd.DataFrame(detailed_results)\n",
     "\n",
-    "# with open('../Version3/GridSearch/Component7Car/results_o2i11_new.pkl', 'rb') as f:\n",
-    "#     detailed_results_df = pickle.load(f)"
+    "with open('./GridSearch/Component7Car/results_o2i11_new.pkl', 'rb') as f:\n",
+    "    detailed_results_df = pickle.load(f)"
    ]
   },
   {
@@ -518,12 +527,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# read pickle\n",
-    "with open('../Version3/ModelPerformance/car_performance_svc.pkl', 'rb') as f:\n",
+    "with open('./ModelPerformance/car_performance_svc.pkl', 'rb') as f:\n",
     "    car_decision_scores = pickle.load(f)\n",
     "\n",
     "sorted_indices = np.argsort(car_decision_scores['indices'])\n",
@@ -537,15 +546,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "choose = '車輛撞擊部位大類別名稱-最初'\n",
+    "choose = 'score'\n",
     "\n",
     "for i in range(87, 88):\n",
     "    print(f'Seed: {i}')\n",
-    "    mapper_plotter = MapperPlotter(detailed_results_df['mapper_info'][0], rbind_data, seed=i, iterations=150)\n",
-    "    mapper_plot = mapper_plotter.create_mapper_plot(choose, most_common_encoded_label, avg=False)\n",
+    "    mapper_plotter = MapperPlotter(detailed_results_df['mapper_info'], rbind_data, seed=i, iterations=150)\n",
+    "    mapper_plot = mapper_plotter.create_mapper_plot(choose, average_encoded_label, avg=True)\n",
     "    full_info = mapper_plotter.extract_data()\n",
     "    mapper_plotter.map_colors(choose, size=15, threshold=0, range_lst=[-0.2, 0.2, 0.2, -0.2])\n",
-    "    mapper_plotter.plot(choose, avg=False, set_label=True, size=100000)"
+    "    mapper_plotter.plot(choose, avg=True, set_label=True, size=100000)\n",
+    "    mapper_plotter.plot_3d_pvis(range_lst=[-0.2, 0.2, 0.2, -0.2])"
    ]
   },
   {
@@ -777,14 +787,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "full_info.to_csv('./Version3/Data/CarData/full_info.csv', index=False)\n",
-    "full_0.to_csv('./Version3/Data/CarData/full_0.csv', index=False)\n",
-    "full_1.to_csv('./Version3/Data/CarData/full_1.csv', index=False)\n",
-    "full_2.to_csv('./Version3/Data/CarData/full_2.csv', index=False)\n",
-    "full_3.to_csv('./Version3/Data/CarData/full_3.csv', index=False)\n",
-    "full_out.to_csv('./Version3/Data/CarData/full_out.csv', index=False)\n",
-    "overlap_data.to_csv('./Version3/Data/CarData/overlap_data.csv', index=False)\n",
-    "full_21.to_csv('./Version3/Data/CarData/full_21.csv', index=False)"
+    "full_info.to_csv('/Data/CarData/full_info.csv', index=False)\n",
+    "full_0.to_csv('/Data/CarData/full_0.csv', index=False)\n",
+    "full_1.to_csv('/Data/CarData/full_1.csv', index=False)\n",
+    "full_2.to_csv('/Data/CarData/full_2.csv', index=False)\n",
+    "full_3.to_csv('/Data/CarData/full_3.csv', index=False)\n",
+    "full_out.to_csv('/Data/CarData/full_out.csv', index=False)\n",
+    "overlap_data.to_csv('/Data/CarData/overlap_data.csv', index=False)\n",
+    "full_21.to_csv('/Data/CarData/full_21.csv', index=False)"
    ]
   },
   {
