--- a/Version3/OriginModel.ipynb
+++ b/Version3/OriginModel.ipynb
@@ -423,17 +423,17 @@
    "source": [
     "import pickle\n",
     "\n",
-    "with open(\"../Version3/ModelPerformance/pass_performance_log.pkl\", \"rb\") as f:\n",
+    "with open(\"./ModelPerformance/pass_performance_log.pkl\", \"rb\") as f:\n",
     "    pass_performance_log = pickle.load(f)\n",
-    "with open(\"../Version3/ModelPerformance/car_performance_log.pkl\", \"rb\") as f:\n",
+    "with open(\"./ModelPerformance/car_performance_log.pkl\", \"rb\") as f:\n",
     "    car_performance_log = pickle.load(f)\n",
-    "with open(\"../Version3/ModelPerformance/full_performance_log.pkl\", \"rb\") as f:\n",
+    "with open(\"./ModelPerformance/full_performance_log.pkl\", \"rb\") as f:\n",
     "    full_performance_log = pickle.load(f)\n",
-    "with open(\"../Version3/ModelPerformance/pass_performance_svc.pkl\", \"rb\") as f:\n",
+    "with open(\"./ModelPerformance/pass_performance_svc.pkl\", \"rb\") as f:\n",
     "    pass_performance_svc = pickle.load(f)\n",
-    "with open(\"../Version3/ModelPerformance/car_performance_svc.pkl\", \"rb\") as f:\n",
+    "with open(\"./ModelPerformance/car_performance_svc.pkl\", \"rb\") as f:\n",
     "    car_performance_svc = pickle.load(f)\n",
-    "with open(\"../Version3/ModelPerformance/full_performance_svc.pkl\", \"rb\") as f:\n",
+    "with open(\"./ModelPerformance/full_performance_svc.pkl\", \"rb\") as f:\n",
     "    full_performance_svc = pickle.load(f)"
    ]
   },
@@ -505,21 +505,21 @@
    "outputs": [],
    "source": [
     "# save as pickle\n",
-    "with open('../Version3/ModelPerformance/pass_perform.pkl', 'wb') as f:\n",
+    "with open('./ModelPerformance/pass_perform.pkl', 'wb') as f:\n",
     "    pickle.dump({    \n",
     "        'confusion': pass_mtrx,\n",
     "        'recall': pass_recall,\n",
     "        'classification': pass_class\n",
     "        }, f)\n",
     "    \n",
-    "with open('../Version3/ModelPerformance/car_perform.pkl', 'wb') as f:\n",
+    "with open('./ModelPerformance/car_perform.pkl', 'wb') as f:\n",
     "    pickle.dump({    \n",
     "        'confusion': car_mtrx,\n",
     "        'recall': car_recall,\n",
     "        'classification': car_class\n",
     "        }, f)\n",
     "    \n",
-    "with open('../Version3/ModelPerformance/full_perform.pkl', 'wb') as f:\n",
+    "with open('./ModelPerformance/full_perform.pkl', 'wb') as f:\n",
     "    pickle.dump({    \n",
     "        'confusion': full_mtrx,\n",
     "        'recall': full_recall,\n",
