--- a/Version3/Pass.ipynb
+++ b/Version3/Pass.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -14,6 +14,7 @@
     }
    ],
    "source": [
+    "\n",
     "import os\n",
     "import sys\n",
     "import time\n",
@@ -35,7 +36,6 @@
     "from tdamapper.core_old import MapperAlgorithm\n",
     "from tdamapper.cover import CubicalCover\n",
     "from tdamapper.clustering import FailSafeClustering\n",
-    "from tdamapper.plot import MapperLayoutInteractive, MapperPlot\n",
     "\n",
     "from models import *\n",
     "from utils_v3 import *\n",
@@ -48,17 +48,10 @@
     "    print(e)\n",
     "\n",
     "plt.rcParams['font.sans-serif'] = ['Microsoft YaHei']\n",
-    "plt.rcParams['axes.unicode_minus'] = False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataA2 = pd.read_csv(\"../Version3/Data/A2.csv\", low_memory=False)\n",
-    "dataA1 = pd.read_csv(\"../Version3/Data/A1.csv\")"
+    "plt.rcParams['axes.unicode_minus'] = False\n",
+    "\n",
+    "dataA2 = pd.read_csv(\"./Data/A2.csv\", low_memory=False)\n",
+    "dataA1 = pd.read_csv(\"./Data/A1.csv\")"
    ]
   },
   {
@@ -75,27 +68,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_34144\\4118275180.py:53: SettingWithCopyWarning:\n",
-      "\n",
-      "\n",
+      "C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_28336\\4118275180.py:53: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "\n",
-      "C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_34144\\4118275180.py:54: SettingWithCopyWarning:\n",
-      "\n",
-      "\n",
+      "  pass_A1.drop(columns=['當事者行動狀態大類別名稱'], inplace=True)\n",
+      "C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_28336\\4118275180.py:54: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "\n"
+      "  pass_A2.drop(columns=['當事者行動狀態大類別名稱'], inplace=True)\n"
      ]
     }
    ],
@@ -163,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +449,7 @@
     "\n",
     "            detailed_results.append(result)\n",
     "\n",
-    "            filename = f\"../Version3/Gridsearch/Component12Pass/results_o{overlap}i{interval}_mac.pkl\"\n",
+    "            filename = f\"./Gridsearch/Component12Pass/results_o{overlap}i{interval}_mac.pkl\"\n",
     "\n",
     "            with open(filename, 'wb') as file:\n",
     "                pickle.dump(result, file)\n",
@@ -477,11 +466,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_file = '../Version3/Gridsearch/Component12Pass/results_o4i7.pkl'\n",
+    "output_file = './Gridsearch/Component12Pass/results_o4i7.pkl'\n",
     "\n",
     "with open(output_file, 'rb') as f:\n",
     "    detailed_results_df = pickle.load(f)"
@@ -496,33 +485,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# read pickle\n",
-    "with open('../Version3/ModelPerformance/pass_performance_svc.pkl', 'rb') as f:\n",
+    "with open('./ModelPerformance/pass_performance_svc.pkl', 'rb') as f:\n",
     "    pass_decision_scores = pickle.load(f)\n",
     "\n",
     "sorted_indices = np.argsort(pass_decision_scores['indices'])\n",
     "y_decision_sorted = pass_decision_scores['decision_scores'][sorted_indices]\n",
     "rbind_data['score'] = y_decision_sorted"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import dash\n",
-    "from dash import dcc, html\n",
-    "import dash_cytoscape as cyto\n",
-    "\n",
-    "from pyvis import network as net\n",
-    "from IPython.display import display, HTML\n",
-    "import pandas as pd\n",
-    "import networkx as nx"
    ]
   },
   {
@@ -539,7 +512,7 @@
     "full_info['x'], full_info['y'] = -full_info['y'], full_info['x']\n",
     "mapper_plotter.map_colors(choose, size=0, threshold=0, range_lst=[-0.2, 0.1, 0.15, -0.18])\n",
     "mapper_plotter.plot(choose, avg=True, set_label=True, size=100000)\n",
-    "mapper_plotter.plot_3d_pvis(range_lst=[-0.2, 0.1, 0.15, -0.18])"
+    "mapper_plotter.plot_3d_pvis2(range_lst=[-0.2, 0.1, 0.15, -0.18], export_json=True)"
    ]
   },
   {
@@ -602,23 +575,6 @@
    "metadata": {},
    "source": [
     "# Polygon"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3096\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(len(get_unique_ids(full_info)))"
    ]
   },
   {
@@ -820,13 +776,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# full_info.to_csv('../Version3/Data/PassData/full_info.csv', index=False)\n",
-    "# full_0.to_csv('../Version3/Data/PassData/full_0.csv', index=False)\n",
-    "# full_1.to_csv('../Version3/Data/PassData/full_1.csv', index=False)\n",
-    "# full_2.to_csv('../Version3/Data/PassData/full_2.csv', index=False)\n",
-    "# full_3.to_csv('../Version3/Data/PassData/full_3.csv', index=False)\n",
-    "# full_out.to_csv('../Version3/Data/PassData/full_out.csv', index=False)\n",
-    "# overlap_data.to_csv('../Version3/Data/PassData/overlap_data.csv', index=False)"
+    "# full_info.to_csv('./Data/PassData/full_info.csv', index=False)\n",
+    "# full_0.to_csv('./Data/PassData/full_0.csv', index=False)\n",
+    "# full_1.to_csv('./Data/PassData/full_1.csv', index=False)\n",
+    "# full_2.to_csv('./Data/PassData/full_2.csv', index=False)\n",
+    "# full_3.to_csv('./Data/PassData/full_3.csv', index=False)\n",
+    "# full_out.to_csv('./Data/PassData/full_out.csv', index=False)\n",
+    "# overlap_data.to_csv('./Data/PassData/overlap_data.csv', index=False)"
    ]
   },
   {
