--- a/Version3/Describe.ipynb
+++ b/Version3/Describe.ipynb
@@ -15,66 +15,30 @@
    ],
    "source": [
     "import os\n",
-    "import sys\n",
-    "# sys.path.append('/Users/wangqiqian/Desktop/TrafficTDApython/')\n",
-    "sys.path.append('C:/Users/USER/Desktop/TrafficTDApython/')\n",
-    "\n",
-    "current_dir_path = os.getcwd()\n",
-    "current_file_path = os.path.abspath(current_dir_path)\n",
-    "current_dir_path = os.path.dirname(current_file_path)\n",
-    "parent_dir_path = os.path.dirname(current_dir_path)\n",
-    "\n",
-    "os.chdir(current_dir_path + '\\\\ultils')\n",
-    "# os.chdir(current_dir_path + '/ultils')\n",
-    "print(current_dir_path)\n",
-    "\n",
-    "import time\n",
-    "import pickle\n",
-    "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "import prince\n",
-    "import matplotlib.cm as cm\n",
-    "from matplotlib.cm import get_cmap\n",
+    "from matplotlib.font_manager import FontProperties\n",
     "\n",
+    "# 獲取當前工作目錄\n",
+    "current_dir = os.getcwd()\n",
+    "version3_path = os.path.join(current_dir, \"TrafficTDApython\", \"Version3\", \"tdamapper\", \"core_old.py\")\n",
     "\n",
-    "from functions import *\n",
-    "from chi import *\n",
-    "from regressionP import *\n",
-    "from models import *\n",
-    "from utils_v3 import *\n",
-    "from plots import *\n",
+    "from utils.models import *\n",
+    "from utils.utils_v3 import *\n",
+    "from utils.plots import *\n",
     "\n",
-    "# os.chdir('/Users/wangqiqian/Desktop/TrafficTDApython/')\n",
-    "os.chdir('C:/Users/USER/Desktop/TrafficTDApython/')\n",
-    "\n",
+    "try:\n",
+    "    myfont = FontProperties(fname=r\"/System/Library/Fonts/PingFang.ttc\")\n",
+    "    sns.set(style=\"whitegrid\", font=myfont.get_name())\n",
+    "except Exception as e:\n",
+    "    print(e)\n",
     "\n",
     "plt.rcParams['font.sans-serif'] = ['Microsoft YaHei']\n",
-    "plt.rcParams['axes.unicode_minus'] = False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data1 = pd.read_csv(\"Data/NPA_TMA2_1.csv\", low_memory=False)[:-2]\n",
-    "data2 = pd.read_csv(\"Data/NPA_TMA2_2.csv\", low_memory=False)[:-2]\n",
-    "data3 = pd.read_csv(\"Data/NPA_TMA2_3.csv\", low_memory=False)[:-2]\n",
-    "data4 = pd.read_csv(\"Data/NPA_TMA2_4_new.csv\", low_memory=False)[:-2]\n",
-    "data5 = pd.read_csv(\"Data/NPA_TMA2_5.csv\", low_memory=False)[:-2]\n",
-    "data6 = pd.read_csv(\"Data/NPA_TMA2_6_new.csv\", low_memory=False)[:-2]\n",
-    "data7 = pd.read_csv(\"Data/NPA_TMA2_7.csv\", low_memory=False)[:-2]\n",
-    "data8 = pd.read_csv(\"Data/NPA_TMA2_8.csv\", low_memory=False)[:-2]\n",
-    "data9 = pd.read_csv(\"Data/NPA_TMA2_9.csv\", low_memory=False)[:-2]\n",
-    "data10 = pd.read_csv(\"Data/NPA_TMA2_10.csv\", low_memory=False)[:-2]\n",
+    "plt.rcParams['axes.unicode_minus'] = False\n",
     "\n",
-    "dataA2 = pd.concat([data1, data2, data3, data4, data5, data6, data7, data8, data9, data10], ignore_index=True)\n",
-    "# dataA2 = pd.concat([data1, data2, data3, data4, data5], ignore_index=True)\n",
-    "\n",
-    "dataA1 = pd.read_csv(\"Data/NPA_TMA1_V3.csv\")[:-2]"
+    "dataA2 = pd.read_csv(\"../Version3/Data/A2.csv\", low_memory=False)\n",
+    "dataA1 = pd.read_csv(\"../Version3/Data/A1.csv\")"
    ]
   },
   {
@@ -414,69 +378,6 @@
     "for i in rbind_data.columns:\n",
     "    print(rbind_data[i].value_counts())\n",
     "    print('-'*100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['發生年度', '發生日期', '發生時間', '事故類別名稱', '處理單位名稱警局層', '發生地點', '天候名稱', '光線名稱',\n",
-       "       '道路類別-第1當事者-名稱', '速限-第1當事者', '道路型態大類別名稱', '道路型態子類別名稱', '事故位置大類別名稱',\n",
-       "       '事故位置子類別名稱', '路面狀況-路面鋪裝名稱', '路面狀況-路面狀態名稱', '路面狀況-路面缺陷名稱', '道路障礙-障礙物名稱',\n",
-       "       '道路障礙-視距品質名稱', '道路障礙-視距名稱', '號誌-號誌種類名稱', '號誌-號誌動作名稱',\n",
-       "       '車道劃分設施-分向設施大類別名稱', '車道劃分設施-分向設施子類別名稱', '車道劃分設施-分道設施-快車道或一般車道間名稱',\n",
-       "       '車道劃分設施-分道設施-快慢車道間名稱', '車道劃分設施-分道設施-路面邊線名稱', '事故類型及型態大類別名稱',\n",
-       "       '事故類型及型態子類別名稱', '肇因研判大類別名稱-主要', '肇因研判子類別名稱-主要', '當事者順位',\n",
-       "       '當事者區分-類別-大類別名稱-車種', '當事者區分-類別-子類別名稱-車種', '當事者屬-性-別名稱', '當事者事故發生時年齡',\n",
-       "       '保護裝備名稱', '行動電話或電腦或其他相類功能裝置名稱', '當事者行動狀態大類別名稱', '當事者行動狀態子類別名稱',\n",
-       "       '車輛撞擊部位大類別名稱-最初', '車輛撞擊部位子類別名稱-最初', '車輛撞擊部位大類別名稱-其他', '車輛撞擊部位子類別名稱-其他',\n",
-       "       '肇因研判大類別名稱-個別', '肇因研判子類別名稱-個別', '肇事逃逸類別名稱-是否肇逃', '經度', '緯度', '死亡', '受傷',\n",
-       "       '縣市'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "rbind_data.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0           省道\n",
-       "1         市區道路\n",
-       "2           縣道\n",
-       "3         市區道路\n",
-       "4           省道\n",
-       "          ... \n",
-       "313928    市區道路\n",
-       "313929    市區道路\n",
-       "313930    市區道路\n",
-       "313931    市區道路\n",
-       "313932    市區道路\n",
-       "Name: 道路類別-第1當事者-名稱, Length: 313933, dtype: object"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "rbind_data['道路類別-第1當事者-名稱']"
    ]
   },
   {
