--- a/Version3/OriginModel.ipynb
+++ b/Version3/OriginModel.ipynb
@@ -27,9 +27,9 @@
     "current_dir = os.getcwd()\n",
     "version3_path = os.path.join(current_dir, \"TrafficTDApython\", \"Version3\", \"tdamapper\", \"core_old.py\")\n",
     "\n",
-    "from models import *\n",
-    "from utils_v3 import *\n",
-    "from plots import *\n",
+    "from utils.models import *\n",
+    "from utils.utils_v3 import *\n",
+    "from utils.plots import *\n",
     "\n",
     "try:\n",
     "    myfont = FontProperties(fname=r\"/System/Library/Fonts/PingFang.ttc\")\n",
@@ -38,15 +38,8 @@
     "    print(e)\n",
     "\n",
     "plt.rcParams['font.sans-serif'] = ['Microsoft YaHei']\n",
-    "plt.rcParams['axes.unicode_minus'] = False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "plt.rcParams['axes.unicode_minus'] = False\n",
+    "\n",
     "dataA2 = pd.read_csv(\"./Data/A2.csv\", low_memory=False)\n",
     "dataA1 = pd.read_csv(\"./Data/A1.csv\")"
    ]
