--- a/Version3/PassMap.ipynb
+++ b/Version3/PassMap.ipynb
@@ -15,9 +15,6 @@
    ],
    "source": [
     "import os\n",
-    "import sys\n",
-    "import time\n",
-    "import pickle\n",
     "import ast\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -31,9 +28,9 @@
     "current_dir = os.getcwd()\n",
     "version3_path = os.path.join(current_dir, \"TrafficTDApython\", \"Version3\", \"tdamapper\", \"core_old.py\")\n",
     "\n",
-    "from models import *\n",
-    "from utils_v3 import *\n",
-    "from plots import *\n",
+    "from utils.models import *\n",
+    "from utils.utils_v3 import *\n",
+    "from utils.plots import *\n",
     "\n",
     "try:\n",
     "    myfont = FontProperties(fname=r\"/System/Library/Fonts/PingFang.ttc\")\n",
@@ -42,15 +39,8 @@
     "    print(e)\n",
     "\n",
     "plt.rcParams['font.sans-serif'] = ['Microsoft YaHei']\n",
-    "plt.rcParams['axes.unicode_minus'] = False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "plt.rcParams['axes.unicode_minus'] = False\n",
+    "\n",
     "dataA2 = pd.read_csv(\"../Version3/Data/A2.csv\", low_memory=False)\n",
     "dataA1 = pd.read_csv(\"../Version3/Data/A1.csv\")\n",
     "info = pd.read_csv(\"./Data/PassData/full_info.csv\", low_memory=False)"
@@ -105,70 +95,59 @@
     "\n",
     "def preprocess(input_data, select_lst):\n",
     "    # 篩選到第一個順位，因為注重的是單次事故的情況\n",
-    "    sample_data = input_data[input_data['當事者順位'] == 1].reset_index(drop=True, inplace=False)\n",
-    "    sample_data = sample_data[sample_data['發生月份'] < 11]\n",
-    "    dataA = sample_data[select_lst]\n",
+    "    main_data = input_data[input_data['當事者順位'] == 1].reset_index(drop=True, inplace=False)\n",
+    "    sample_data = main_data[main_data['發生月份'] < 11]\n",
+    "    selected_data = sample_data[select_lst]\n",
     "    \n",
     "    # 將資料分出死亡和受傷，合併到原本的資料後去除多餘的死亡受傷人數\n",
-    "    death_injury_data = split_death_injury(dataA['死亡受傷人數'])\n",
-    "    dist_df = pd.concat([dataA, death_injury_data], axis=1)\n",
+    "    split_death_injury_data = split_death_injury(selected_data['死亡受傷人數'])\n",
+    "    full_data = pd.concat([selected_data, split_death_injury_data], axis=1)\n",
     "\n",
     "    # 補齊缺失值\n",
-    "    dist_df[select_lst] = dist_df[select_lst].fillna('未紀錄')\n",
+    "    full_data[select_lst] = full_data[select_lst].fillna('未紀錄')\n",
     "\n",
     "    # 速限範圍\n",
-    "    dist_df = dist_df[(dist_df['速限-第1當事者'] < 200) &\n",
-    "                      (dist_df['當事者事故發生時年齡'] < 100) &\n",
-    "                      (dist_df['當事者事故發生時年齡'] > 0)]\n",
+    "    full_data = full_data[(full_data['速限-第1當事者'] < 200) &\n",
+    "                      (full_data['當事者事故發生時年齡'] < 100) &\n",
+    "                      (full_data['當事者事故發生時年齡'] > 0)]\n",
     "\n",
-    "    dist_df.drop(columns=['死亡受傷人數'], inplace=True)\n",
+    "    full_data.drop(columns=['死亡受傷人數'], inplace=True)\n",
     "    \n",
-    "    return dist_df\n",
+    "    # 篩選非駕駛人的資料\n",
+    "    full_data = full_data[full_data['當事者行動狀態大類別名稱'] == '人的狀態']\n",
+    "    full_data.drop(columns=['當事者行動狀態大類別名稱'], inplace=True)\n",
+    "    # 篩選離群資料(影響MCA的因子得分)\n",
+    "    full_data = full_data[(full_data['行動電話或電腦或其他相類功能裝置名稱'] != '未紀錄') &\n",
+    "                   (full_data['行動電話或電腦或其他相類功能裝置名稱'] != '不明')]\n",
+    "    \n",
+    "    return full_data\n",
     "\n",
-    "dist_dfA1 = preprocess(dataA1, select_lst)\n",
-    "dist_dfA2 = preprocess(dataA2, select_lst)\n",
+    "full_dataA1 = preprocess(dataA1, select_lst)\n",
+    "full_dataA2 = preprocess(dataA2, select_lst)\n",
     "\n",
-    "pass_A2 = dist_dfA2[dist_dfA2['當事者行動狀態大類別名稱'] == '人的狀態']\n",
-    "pass_A1 = dist_dfA1[dist_dfA1['當事者行動狀態大類別名稱'] == '人的狀態']\n",
-    "\n",
-    "# drop\n",
-    "pass_A1.drop(columns=['當事者行動狀態大類別名稱'], inplace=True)\n",
-    "pass_A2.drop(columns=['當事者行動狀態大類別名稱'], inplace=True)\n",
-    "\n",
-    "pass_A2 = pass_A2[(pass_A2['行動電話或電腦或其他相類功能裝置名稱'] != '未紀錄') &\n",
-    "                   (pass_A2['行動電話或電腦或其他相類功能裝置名稱'] != '不明')]\n",
-    "pass_A1 = pass_A1[(pass_A1['行動電話或電腦或其他相類功能裝置名稱'] != '未紀錄') &\n",
-    "                   (pass_A1['行動電話或電腦或其他相類功能裝置名稱'] != '不明')]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dummy_data: (3096, 120)\n"
-     ]
-    }
-   ],
-   "source": [
     "# Concat\n",
-    "rbind_data = pd.concat([pass_A1, pass_A2], axis=0, ignore_index=True)\n",
+    "rbind_data = pd.concat([full_dataA1, full_dataA2], axis=0, ignore_index=True)\n",
     "rbind_data.drop(columns=['發生月份'], inplace=True)\n",
     "\n",
     "# 處理年齡和速限\n",
     "rbind_data = process_age_speed(rbind_data)\n",
+    "rbind_data.drop(['死亡', '受傷'], axis=1, inplace=True)\n",
+    "# 唯一值處理\n",
+    "columns_to_drop = []\n",
+    "for column in rbind_data.columns:\n",
+    "    if rbind_data[column].nunique() == 1:  # 檢查唯一值數量是否等於 1\n",
+    "        columns_to_drop.append(column)\n",
     "\n",
-    "# Dummy\n",
+    "columns_to_drop\n",
+    "\n",
+    "# 去掉唯一值\n",
+    "rbind_data.drop(columns=columns_to_drop, inplace=True)\n",
+    "\n",
     "dummy_data = pd.get_dummies(rbind_data)\n",
+    "print(dummy_data.shape)\n",
+    "mapper_numpy = dummy_data.to_numpy()\n",
     "\n",
-    "print('dummy_data:', dummy_data.shape)\n",
-    "\n",
-    "data_to_map = dummy_data.drop(['死亡', '受傷'], axis=1)\n",
-    "mapper_numpy = data_to_map.to_numpy()"
+    "# rbind_data['顯著特徵'] = rbind_data['道路型態子類別名稱'] + ',' + rbind_data['號誌-號誌動作名稱'] + ',' + rbind_data['天候名稱']"
    ]
   },
   {
