--- a/Version3/CarMap.ipynb
+++ b/Version3/CarMap.ipynb
@@ -18,8 +18,6 @@
     "import sys\n",
     "import time\n",
     "import ast\n",
-    "import pickle\n",
-    "import prince\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
@@ -38,9 +36,9 @@
     "from tdamapper.clustering import FailSafeClustering\n",
     "from tdamapper.plot import MapperLayoutInteractive, MapperPlot\n",
     "\n",
-    "from models import *\n",
-    "from utils_v3 import *\n",
-    "from plots import *\n",
+    "from utils.models import *\n",
+    "from utils.utils_v3 import *\n",
+    "from utils.plots import *\n",
     "\n",
     "try:\n",
     "    myfont = FontProperties(fname=r\"/System/Library/Fonts/PingFang.ttc\")\n",
@@ -49,15 +47,8 @@
     "    print(e)\n",
     "\n",
     "plt.rcParams['font.sans-serif'] = ['Microsoft YaHei']\n",
-    "plt.rcParams['axes.unicode_minus'] = False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "plt.rcParams['axes.unicode_minus'] = False\n",
+    "\n",
     "dataA2 = pd.read_csv(\"../Version3/Data/A2.csv\", low_memory=False)\n",
     "dataA1 = pd.read_csv(\"../Version3/Data/A1.csv\")\n",
     "info = pd.read_csv(\"./Data/CarData/full_info.csv\", low_memory=False)"
@@ -65,26 +56,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_36240\\3259217205.py:56: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  car_A1.drop(columns=['當事者行動狀態大類別名稱'], inplace=True)\n",
-      "C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_36240\\3259217205.py:57: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  car_A2.drop(columns=['當事者行動狀態大類別名稱'], inplace=True)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "select_lst = [\n",
     "    # 月份是為了篩選每個月2萬筆\n",
@@ -107,133 +81,68 @@
     "    '事故類型及型態大類別名稱', '當事者區分-類別-大類別名稱-車種', '當事者行動狀態大類別名稱',\n",
     "    '車輛撞擊部位大類別名稱-最初', '車輛撞擊部位大類別名稱-其他',\n",
     "\n",
-    "    '經度', '緯度',\n",
     "    # 兩個欄位只有兩個觀察值不同\n",
     "    '肇因研判大類別名稱-主要',\n",
     "    # '肇因研判大類別名稱-個別',\n",
     "]\n",
-    "# select_lst = dataA1.columns\n",
+    "\n",
     "def preprocess(input_data, select_lst):\n",
     "    # 篩選到第一個順位，因為注重的是單次事故的情況\n",
-    "    sample_data = input_data[input_data['當事者順位'] == 1].reset_index(drop=True, inplace=False)\n",
-    "    sample_data = sample_data[sample_data['發生月份'] < 11]\n",
-    "    dataA = sample_data[select_lst]\n",
+    "    main_data = input_data[input_data['當事者順位'] == 1].reset_index(drop=True, inplace=False)\n",
+    "    sample_data = main_data[main_data['發生月份'] < 11]\n",
+    "    selected_data = sample_data[select_lst]\n",
     "    \n",
     "    # 將資料分出死亡和受傷，合併到原本的資料後去除多餘的死亡受傷人數\n",
-    "    death_injury_data = split_death_injury(dataA['死亡受傷人數'])\n",
-    "    dist_df = pd.concat([dataA, death_injury_data], axis=1)\n",
+    "    split_death_injury_data = split_death_injury(selected_data['死亡受傷人數'])\n",
+    "    full_data = pd.concat([selected_data, split_death_injury_data], axis=1)\n",
     "\n",
     "    # 補齊缺失值\n",
-    "    dist_df[select_lst] = dist_df[select_lst].fillna('未紀錄')\n",
+    "    full_data[select_lst] = full_data[select_lst].fillna('未紀錄')\n",
     "\n",
     "    # 速限範圍\n",
-    "    dist_df = dist_df[(dist_df['速限-第1當事者'] < 200) &\n",
-    "                      (dist_df['當事者事故發生時年齡'] < 100) &\n",
-    "                      (dist_df['當事者事故發生時年齡'] > 0)]\n",
+    "    full_data = full_data[(full_data['速限-第1當事者'] < 200) &\n",
+    "                      (full_data['當事者事故發生時年齡'] < 100) &\n",
+    "                      (full_data['當事者事故發生時年齡'] > 0)]\n",
     "\n",
-    "    dist_df.drop(columns=['死亡受傷人數'], inplace=True)\n",
+    "    full_data.drop(columns=['死亡受傷人數'], inplace=True)\n",
     "    \n",
-    "    return dist_df\n",
+    "    # 篩選駕駛人的資料\n",
+    "    full_data = full_data[full_data['當事者行動狀態大類別名稱'] == '車的狀態']\n",
+    "    full_data.drop(columns=['當事者行動狀態大類別名稱'], inplace=True)\n",
+    "    # 篩選離群資料(影響MCA的因子得分)\n",
+    "    full_data = full_data[(full_data['肇因研判大類別名稱-主要'] != '非駕駛者') &\n",
+    "                  (full_data['肇因研判大類別名稱-主要'] != '無(非車輛駕駛人因素)') &\n",
+    "                  (full_data['肇因研判大類別名稱-主要'] != '無(車輛駕駛者因素)') &\n",
+    "                  (full_data['行動電話或電腦或其他相類功能裝置名稱'] != '未紀錄') &\n",
+    "                    (full_data['車輛撞擊部位大類別名稱-最初'] != '未紀錄')]\n",
     "\n",
-    "dist_dfA1 = preprocess(dataA1, select_lst)\n",
-    "dist_dfA2 = preprocess(dataA2, select_lst)\n",
+    "    return full_data\n",
     "\n",
-    "car_A2 = dist_dfA2[dist_dfA2['當事者行動狀態大類別名稱'] == '車的狀態']\n",
-    "car_A1 = dist_dfA1[dist_dfA1['當事者行動狀態大類別名稱'] == '車的狀態']\n",
+    "full_dataA1 = preprocess(dataA1, select_lst)\n",
+    "full_dataA2 = preprocess(dataA2, select_lst)\n",
     "\n",
-    "car_A1.drop(columns=['當事者行動狀態大類別名稱'], inplace=True)\n",
-    "car_A2.drop(columns=['當事者行動狀態大類別名稱'], inplace=True)\n",
-    "\n",
-    "car_A2 = car_A2[(car_A2['肇因研判大類別名稱-主要'] != '非駕駛者') &\n",
-    "                  (car_A2['肇因研判大類別名稱-主要'] != '無(非車輛駕駛人因素)') &\n",
-    "                  (car_A2['肇因研判大類別名稱-主要'] != '無(車輛駕駛者因素)')]\n",
-    "car_A1 = car_A1[(car_A1['肇因研判大類別名稱-主要'] != '非駕駛者') &\n",
-    "                  (car_A1['肇因研判大類別名稱-主要'] != '無(非車輛駕駛人因素)') &\n",
-    "                  (car_A1['肇因研判大類別名稱-主要'] != '無(車輛駕駛者因素)')] # 刪掉原因為類似於他提供不了更多資訊，但會使Mapper更加分散\n",
-    "\n",
-    "car_A2 = car_A2[car_A2['行動電話或電腦或其他相類功能裝置名稱'] != '未紀錄']\n",
-    "car_A1 = car_A1[car_A1['行動電話或電腦或其他相類功能裝置名稱'] != '未紀錄']\n",
-    "\n",
-    "car_A2 = car_A2[car_A2['車輛撞擊部位大類別名稱-最初'] != '未紀錄']\n",
-    "car_A1 = car_A1[car_A1['車輛撞擊部位大類別名稱-最初'] != '未紀錄']\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "44\n",
-      "10057\n",
-      "45\n",
-      "10286\n",
-      "40\n",
-      "9143\n",
-      "35\n",
-      "8000\n",
-      "36\n",
-      "8229\n",
-      "39\n",
-      "8914\n",
-      "47\n",
-      "10743\n",
-      "43\n",
-      "9829\n",
-      "40\n",
-      "9143\n",
-      "47\n",
-      "10743\n",
-      "(416, 33)\n",
-      "(95087, 33)\n"
-     ]
-    }
-   ],
-   "source": [
-    "sampling_ratio = 0.33  # 下採樣比例\n",
-    "# 計算 A1 和 A2 原始數據量比例\n",
-    "A1_total = len(car_A1)\n",
-    "A2_total = len(car_A2)\n",
-    "total_ratio = A1_total / A2_total  # 保留 A1/A2 的比例\n",
-    "# 下採樣\n",
-    "downsampled_A1, downsampled_A2 = downsample_by_month_simple(car_A1, car_A2, sampling_ratio, total_ratio)\n",
-    "print(downsampled_A1.shape)\n",
-    "print(downsampled_A2.shape)\n",
-    "\n",
+    "# 下採樣資料\n",
+    "sampling_ratio = 0.33  # 下採樣比例，根據A1 和 A2 原始數據量比例調整\n",
+    "total_ratio = len(full_dataA1) / len(full_dataA2) # 保留 A1/A2 的比例\n",
+    "downsampled_A1, downsampled_A2 = downsample_by_month_simple(full_dataA1, full_dataA2, sampling_ratio, total_ratio)\n",
     "# Concat\n",
     "rbind_data = pd.concat([downsampled_A1, downsampled_A2], axis=0, ignore_index=True)\n",
-    "rbind_data.drop(columns=['發生月份'], inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dummy_data: (95503, 146)\n"
-     ]
-    }
-   ],
-   "source": [
+    "rbind_data.drop(columns=['發生月份'], inplace=True)\n",
     "# 處理年齡和速限\n",
     "rbind_data = process_age_speed(rbind_data)\n",
-    "\n",
-    "# assert rbind_data.shape[0] == dist_dfA1.shape[0] + dist_dfA2.shape[0]\n",
+    "rbind_data.drop(['死亡', '受傷'], axis=1, inplace=True)\n",
+    "# 唯一值處理\n",
+    "columns_to_drop = []\n",
+    "for column in rbind_data.columns:\n",
+    "    if rbind_data[column].nunique() == 1:  # 檢查唯一值數量是否等於 1\n",
+    "        columns_to_drop.append(column)\n",
     "# Dummy\n",
     "rbind_data[\"速限-第1當事者\"] = rbind_data[\"速限-第1當事者\"].astype(str)\n",
     "dummy_data = pd.get_dummies(rbind_data)\n",
-    "\n",
     "print('dummy_data:', dummy_data.shape)\n",
+    "mapper_numpy = dummy_data.to_numpy()\n",
     "\n",
-    "data_to_map = dummy_data.drop(['死亡', '受傷'], axis=1)\n",
-    "mapper_numpy = data_to_map.to_numpy()"
+    "# rbind_data['顯著特徵'] = rbind_data['道路型態子類別名稱'] + ',' + rbind_data['號誌-號誌動作名稱'] + ',' + rbind_data['天候名稱']"
    ]
   },
   {
