--- a/Version3/CarMap.ipynb
+++ b/Version3/CarMap.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -56,9 +56,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "44 10057\n",
+      "45 10286\n",
+      "40 9143\n",
+      "35 8000\n",
+      "36 8229\n",
+      "39 8914\n",
+      "47 10743\n",
+      "43 9829\n",
+      "40 9143\n",
+      "47 10743\n",
+      "dummy_data: (95503, 146)\n"
+     ]
+    }
+   ],
    "source": [
     "select_lst = [\n",
     "    # 月份是為了篩選每個月2萬筆\n",
@@ -84,6 +102,8 @@
     "    # 兩個欄位只有兩個觀察值不同\n",
     "    '肇因研判大類別名稱-主要',\n",
     "    # '肇因研判大類別名稱-個別',\n",
+    "    \n",
+    "    '經度', '緯度',\n",
     "]\n",
     "\n",
     "def preprocess(input_data, select_lst):\n",
@@ -130,7 +150,7 @@
     "rbind_data.drop(columns=['發生月份'], inplace=True)\n",
     "# 處理年齡和速限\n",
     "rbind_data = process_age_speed(rbind_data)\n",
-    "rbind_data.drop(['死亡', '受傷'], axis=1, inplace=True)\n",
+    "# rbind_data.drop(['死亡', '受傷'], axis=1, inplace=True)\n",
     "# 唯一值處理\n",
     "columns_to_drop = []\n",
     "for column in rbind_data.columns:\n",
@@ -178,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,11 +325,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "def get_train_test_data(input_data, classify=True):\n",
     "    \n",
     "    if classify:\n",
@@ -319,41 +338,36 @@
     "    new_input_data = input_data.drop(columns=['受傷', '死亡'], inplace=False)\n",
     "    X = new_input_data\n",
     "\n",
-    "    return X, y\n",
-    "\n",
-    "pass_X, pass_y = get_train_test_data(final_table)\n",
-    "pass_X = pass_X.drop(columns=['經度', '緯度'], inplace=False)"
+    "    return X, y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best parameters for this fold: {'C': 10, 'penalty': 'l1'}\n",
-      "Best parameters for this fold: {'C': 10, 'penalty': 'l1'}\n",
-      "Best parameters for this fold: {'C': 10, 'penalty': 'l1'}\n",
-      "Best parameters for this fold: {'C': 10, 'penalty': 'l1'}\n",
-      "Best parameters for this fold: {'C': 10, 'penalty': 'l1'}\n"
+      "Mean Squared Error (MSE): 0.0066\n",
+      "R^2 Score: -0.0139\n"
      ]
     }
    ],
    "source": [
-    "pass_y_resampled_test_log, pass_decision_scores_log, pass_indices_log = logistic_cm_kfold(pass_X, pass_y)"
+    "pass_X, pass_y = get_train_test_data(final_table, classify=False)\n",
+    "pass_y_ridge, pass_decision_scores_ridge, pass_indices_ridge = ridge_cm_kfold(pass_X, pass_y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "info['死亡比例'] = final_table['死亡']\n",
-    "info['score'] = pass_decision_scores_log\n",
+    "info['score'] = pass_decision_scores_ridge\n",
     "\n",
     "from collections import defaultdict\n",
     "\n",
@@ -381,16 +395,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'./weighted_points_map.html'"
+       "'./Map/car_weighted_map.html'"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
