--- a/Version3/PassMap.ipynb
+++ b/Version3/PassMap.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -48,23 +48,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_34280\\533796465.py:54: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  pass_A1.drop(columns=['當事者行動狀態大類別名稱'], inplace=True)\n",
-      "C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_34280\\533796465.py:55: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  pass_A2.drop(columns=['當事者行動狀態大類別名稱'], inplace=True)\n"
+      "(3096, 117)\n"
      ]
     }
    ],
@@ -131,7 +122,7 @@
     "\n",
     "# 處理年齡和速限\n",
     "rbind_data = process_age_speed(rbind_data)\n",
-    "rbind_data.drop(['死亡', '受傷'], axis=1, inplace=True)\n",
+    "# rbind_data.drop(['死亡', '受傷'], axis=1, inplace=True)\n",
     "# 唯一值處理\n",
     "columns_to_drop = []\n",
     "for column in rbind_data.columns:\n",
@@ -152,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,14 +186,12 @@
     "    new_input_data = input_data.drop(columns=['受傷', '死亡'], inplace=False)\n",
     "    X = new_input_data\n",
     "\n",
-    "    return X, y\n",
-    "\n",
-    "pass_X, pass_y = get_train_test_data(final_table)"
+    "    return X, y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,30 +288,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Squared Error (MSE): 0.1714\n",
-      "R^2 Score: 0.0856\n"
+      "Mean Squared Error (MSE): 0.0297\n",
+      "R^2 Score: -0.1282\n"
      ]
     }
    ],
    "source": [
-    "pass_y_resampled_test_log, pass_decision_scores_log, pass_indices_log = ridge_cm_kfold(pass_X, pass_y)"
+    "pass_X, pass_y = get_train_test_data(final_table, classify=False)\n",
+    "pass_y_ridge, pass_decision_scores_ridge, pass_indices_ridge = ridge_cm_kfold(pass_X, pass_y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "info['死亡比例'] = final_table['死亡']\n",
-    "info['score'] = pass_decision_scores_log\n",
+    "info['score'] = pass_decision_scores_ridge\n",
     "\n",
     "from collections import defaultdict\n",
     "\n",
@@ -350,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +349,7 @@
        "'./Map/pass_weighted_map.html'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
