--- a/Version3/Pass.ipynb
+++ b/Version3/Pass.ipynb
@@ -1482,7 +1482,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Cllava",
    "language": "python",
    "name": "python3"
   },
@@ -1496,7 +1496,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
